--- a/ToDo.txt
+++ b/ToDo.txt
@@ -8,14 +8,14 @@ Chat :
 
 
 Interface :
--Affichage des personnes connectées, et des joueurs morts
+[EN COURS]-Affichage des personnes connectées, et des joueurs morts
 -Affichage des rôles possibles, ainsi que leur explication
- [En Cours] -Affichage du rôle du joueur (en haut à droite)
--Affichage du cycle Jour/Nuit (Jour = blanc / Nuit = Noir ?)
+[FAIT] -Affichage du rôle du joueur (en haut à droite)
+[EN COURS]-Affichage du cycle Jour/Nuit (Jour = blanc / Nuit = Noir ?)
 
 
 Programme : 
 [FAIT] -Gestion de l'algorithme d'attribution d'un rôle
 -Gestion des IA des 'BotsJoueurs' (def, vote, actions pendant la nuit)
--Gestion des timers (vote / nuit / jour / actions des joueurs)
--Gestion du cycle Jour/Nuit (Nuit = actions des joueurs / Jour = vote, def)
+[EN COURS] -Gestion des timers (vote / nuit / jour / actions des joueurs)
+[FAIT] -Gestion du cycle Jour/Nuit (Nuit = actions des joueurs / Jour = vote, def)
